--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mystery Dining Reservations</title>
-  <!-- Google Fonts: Brandon Text -->
+  <!-- Google Fonts  -->
   <link
     href="https://fonts.googleapis.com/css2?family=Brandon+Text:wght@400;700&display=swap"
     rel="stylesheet"
   />
-  <!-- Link to external CSS -->
+  <!-- Link to Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+ 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
