--- a/index.html
+++ b/index.html
@@ -38,7 +38,46 @@
       <div class="reservation-card">
         <h2>Reserve Now</h2>
         <div class="form-placeholder">
-          [Reservation Form Placeholder]
+          <form>
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" placeholder="you@example.com" required>
+            </div>
+            <div class="mb-3">
+              <label for="zip" class="form-label">Zip Code</label>
+              <input type="text" class="form-control" id="zip" placeholder="12345" required>
+            </div>
+            <div class="mb-3">
+              <label for="partySize" class="form-label">Party Size</label>
+              <input type="number" class="form-control" id="partySize" min="1" max="20" placeholder="Number of Guests" required>
+            </div>
+            <div class="mb-3">
+              <label for="adventureLevel" class="form-label">Adventure Level</label>
+              <select class="form-select" id="adventureLevel" required>
+                <option value="" disabled selected>Select Level</option>
+                <option value="mild">Mild</option>
+                <option value="moderate">Moderate</option>
+                <option value="wild">Wild</option>
+              </select>
+            </div>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="birthdayCake">
+              <label class="form-check-label" for="birthdayCake">
+                Would you like to pretend it's your birthday for free cake?
+              </label>
+            </div>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="acceptUnknown" required>
+              <label class="form-check-label" for="acceptUnknown">
+                I accept that I have no idea where I'll be eating, and that's OK.
+              </label>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Reserve</button>
+          </form>
         </div>
       </div>
     </div>
