--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 I accept that I have no idea where I'll be eating, and that's OK.
               </label>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Reserve</button>
+            <button type="submit" class="btn btn-primary w-100">Book My Mystery Meal</button>
           </form>
         </div>
       </div>
